--- a/app/src/main/res/layout/list_item_serious_crime.xml
+++ b/app/src/main/res/layout/list_item_serious_crime.xml
@@ -20,7 +20,5 @@
         android:id="@+id/contact_police_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Contact Police"
-        android:visibility="gone" />
-
+        android:text="Contact Police" />
 </LinearLayout>
